--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,19 @@
             })
         }
 
+        function fetchAll(){
+            let TestClass = ncmb.DataStore("FetchTest");
+            TestClass.fetchAll()
+            .then(function(results){
+                let msg = "";
+                for(let i = 0;i < results.length; i++){
+                    let data = results[i].get("text");
+                    let update = results[i].get("updateDate");
+                    msg += data+":"+update;
+                }
+                 $("#message").html(msg);
+            })
+        }
     </script>
 </head>
 
