--- a/www/index.html
+++ b/www/index.html
@@ -47,11 +47,13 @@
             TestClass.fetchAll()
             .then(function(results){
                 let msg = "";
+                msg += "<table>"+"<tr>"+"<th>"+"messeage"+"</th>"+"<th>"+"Update date"+"</th>"+"</tr>";
                 for(let i = 0;i < results.length; i++){
                     let data = results[i].get("text");
                     let update = results[i].get("updateDate");
-                    msg += data+":"+update+"<br>";
+                    msg += "<tr>"+"<td>"+data+"</td>"+"<td>"+update+"</td>"+"<br>";
                 }
+                msg+="</table>"
                  $("#message").html(msg);
             })
         }
